@@ -18,9 +18,9 @@ public class SimpleMatchTopology {
 
         TopologyBuilder builder = new TopologyBuilder();
 
-        builder.setSpout("SubSpout", new SubscriptionSpout(), 1);
-        builder.setSpout("EventSpout", new EventSpout(), 1);
-        builder.setBolt("bolt", new SimpleMatchBolt("1"), 1).allGrouping("SubSpout").shuffleGrouping("EventSpout");
+        builder.setSpout("SubSpout", new SubscriptionSpout("SubSpout1"), 1);
+        builder.setSpout("EventSpout", new EventSpout("EventSpout1"), 1);
+        builder.setBolt("SMBolt", new SimpleMatchBolt("SimpleMatchBolt1"), 1).allGrouping("SubSpout").shuffleGrouping("EventSpout");
 
         Config conf = new Config();
         Config.setFallBackOnJavaSerialization(conf, false); // Don't use java's serialization.
@@ -32,14 +32,18 @@ public class SimpleMatchTopology {
         conf.setDebug(false);
         conf.setNumWorkers(3);
         conf.setMaxTaskParallelism(1);
-
+        conf.put(Config.TOPOLOGY_ACKER_EXECUTORS, 10);// 设置acker的数量, default: 1
+        conf.put(Config.TOPOLOGY_MAX_SPOUT_PENDING, 100);//设置一个spout task上面最多有多少个没有处理的tuple（没有ack/failed）回复，以防止tuple队列爆掉
+        conf.put(Config.TOPOLOGY_WORKER_CHILDOPTS,"-Xmx%HEAP-MEM%m -XX:+PrintGCDetails -Xloggc:artifacts/gc.log  -XX:+PrintGCTimeStamps -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=10 -XX:GCLogFileSize=1M -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=artifacts/heapdump");
+        // -XX:+PrintGCDateStamps is omitted, because it will lead to a log: "[INFO] Unrecognized VM option 'PrintGCDateStamps'"
         String topoName = "SimpleMatchTopology";
         if (args != null && args.length > 0) {
             topoName = args[0];
         }
 
-        LocalCluster localCluster=new LocalCluster();
-        localCluster.submitTopology(topoName,conf,builder.createTopology());
-//        StormSubmitter.submitTopologyWithProgressBar(topoName, conf, builder.createTopology());
+
+//        LocalCluster localCluster=new LocalCluster();
+//        localCluster.submitTopology(topoName,conf,builder.createTopology());
+        StormSubmitter.submitTopologyWithProgressBar(topoName, conf, builder.createTopology());
     }
 }
